tests/paczka1/fuzzy1/57982705.err
Error in line 11: TLY2iD A894 19,3
Error in line 17: T84HRBV9r A894 60,6
